test/fail/enums_and_variants/scoped_variant_direct.lly
#[
SyntaxError: One has not been declared.
    from scoped_variant_direct.lly:11
]#

enum Test[A] {
    .One(A)
    .Two
}

var opt: Test[Integer] = One(10)
